zsnes (1.510+bz2-4) UNRELEASED; urgency=low

  * Disable build on amd64 (Closes: #679526)
    - Add Multi-Arch: Foreign
  * Add patch to initialize the ao_sample_format structure
    (thanks to Fabian Greffrath & Goswin von Brederlow - Closes: #679826)
  * debian/compat : use level 9 compatibility level
  * debian/rules :
    - use find -delete instead of command expansion
    - use dpkg-buildflags
    - add -Wl,--as-needed to LDFLAGS (Closes: #607311)

  [ Eshat Cakar ]
  * Improve zsnes.desktop file, thanks to Fabian Greffrath (Closes: #680054)

 -- Etienne Millon <etienne.millon@gmail.com>  Fri, 29 Jun 2012 17:37:53 +0200

zsnes (1.510+bz2-3) unstable; urgency=low

  * New patches :
    - handle the nostrip build option (Closes: #438384)
    - fix FTBFS with gcc 4.7 (Closes: #667429)
    - fix audio output with libao (Closes: #470410)
  * Build-depend on libpng-dev instead of libpng12-dev (Closes: #662578)
  * Bump Standards-Version to 3.9.3 (no changes).

 -- Etienne Millon <etienne.millon@gmail.com>  Tue, 08 May 2012 15:17:42 +0200

zsnes (1.510+bz2-2) unstable; urgency=low

  * Add a patch to fix build with libpng 1.5
    (Closes: #649801, thanks to Nobuhiro Iwamatsu).
  * Enable the built-in debugger (Closes: #513201).
  * Use dh-autoreconf instead of autotools-dev.
  * Add a patch fixing hat positions not resetting properly (thanks to hakonrk
    & Simeon Maxein).
  * Add explicit dependency on libgl-dev or its implementation
    (Closes: #641277, thanks to Matthias Klose).
  * Bump Standards-Version to 3.9.2 (no changes).

 -- Etienne Millon <etienne.millon@gmail.com>  Sun, 18 Dec 2011 21:30:11 +0100

zsnes (1.510+bz2-1) unstable; urgency=low

  * Use upstream tarball (in bzip2 format) instead of a custom gzip one.
  * debian/rules: add -lpthread to LDFLAGS to fix FTBFS with new binutils
    (Closes: #620656)
  * debian/control:
    - Remove an incorrect statement about multiplayer in the description
    (Closes: #616445)